# Groq_Switcher

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.bat
.agents/: AGENTS.md
switcher/: __init__.py  app.py  config.py
