[project]
name = "groq-switcher"
version = "0.1.0"
description = "A Textual TUI tool for switching between multiple Groq API accounts"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80.0",
    "python-dotenv",
]

[project.scripts]
groq-switcher = "main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
